@@ -1,4 +1,5 @@
 5.3.2 -> 5.4a1:
+    - jbj: cdsa: wire up RSA/DSA generate/sign/verify methods.
 
 5.3.1 -> 5.3.2:
     - jbj: pgp: fix: algo parameters to signature/pubkey with msbits().
